<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/back"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/TitleBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/car_name"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="end|center" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp" >

        <ImageView
            android:id="@+id/detailImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            android:src="@drawable/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/detailTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="30dp"
                    android:background="@color/black">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/hp"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="30dp"
                    android:background="@color/black">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/mesin"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="30dp"
                    android:background="@color/black">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/torsi"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/detailInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detailDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:justificationMode="inter_word"
                android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
